<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/title"
            android:textAlignment="viewStart"
            android:textColor="@color/login"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_1"
        android:textAlignment="viewStart"
        android:textSize="14sp" />

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/username"
        android:textColor="@color/login"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_marginLeft="20dp"
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:hint="@string/username_hide" />

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/password"
        android:textColor="@color/login"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_marginLeft="20dp"
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:hint="@string/password_hide"
        android:inputType="textPassword"
        />

    <Button
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/login"
        android:layout_alignParentRight="true"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_code"
        android:text="@string/login_text"
        android:textColor="@color/login_text"
        android:textSize="18sp"

        />
</LinearLayout>