<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_2"
        android:textColor="@color/login"
        android:textSize="30sp" />

    <TextView
        android:layout_marginLeft="20dp"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_3" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str2"
                android:textColor="@color/login" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str1"
                android:textColor="@color/login" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str6"
                android:textColor="@color/login"
                android:textSize="12sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn1"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:backgroundTint="@color/login_button"
                app:srcCompat="?android:attr/actionModePasteDrawable" />

            <ImageButton
                android:id="@+id/btn2"
                android:layout_width="112dp"
                android:layout_height="112dp"

                android:backgroundTint="@color/login_button"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <ImageButton
                android:id="@+id/btn3"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:backgroundTint="@color/login_button"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str4"
                android:textColor="@color/login" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str5"
                android:textColor="@color/login" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str3"
                android:textColor="@color/login" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/login_out"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:backgroundTint="@color/color01"
                app:srcCompat="@android:drawable/ic_lock_power_off" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:backgroundTint="@color/login_button"
                app:srcCompat="@android:drawable/ic_menu_manage" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:backgroundTint="@color/login_button"
                app:srcCompat="@android:drawable/ic_menu_help" />
        </TableRow>

    </TableLayout>

</LinearLayout>